--- a/index.html
+++ b/index.html
@@ -65,7 +65,68 @@
       </section>
   
 
+      <section id="about-us">
+        <div class="about-us-container">
+            <div class="container">
+                <nav class="about-us-nav">
+                  <div class="nav nav-tabs about-navbar" id="nav-tab" role="tablist">
+                    <a class="nav-item nav-link active" id="nav-about-college-tab" data-toggle="tab" href="#nav-about-college" role="tab" aria-controls="nav-home" aria-selected="true">About College</a>
+                    <a class="nav-item nav-link" id="nav-about-dept-tab" data-toggle="tab" href="#nav-about-dept" role="tab" aria-controls="nav-dept" aria-selected="false">About Department</a>
+                    <a class="nav-item nav-link" id="nav-about-ieee-tab" data-toggle="tab" href="#nav-about-ieee" role="tab" aria-controls="nav-ieee" aria-selected="false">About ieee</a>
+                  </div>
+                </nav>
+                <div class="tab-content about-contents" id="nav-tabContent">
+                  <div class="tab-pane fade show active" id="nav-about-college" role="tabpanel" aria-labelledby="nav-home-tab">Rajalakshmi Engineering College, an Autonomous institution affiliated to Anna University, Chennai, was established in the year 1997 under the aegis of Rajalakshmi Educational Trust whose members have had consummate experience in the fields of education and industry. The College has grown from strength to strength in the last 23 years and progressing towards Excellence in Engineering Education, Research and Development. The College presently offers 16 Undergraduate and 10 Post Graduate programmes, with an annual intake of 2030 students. The approval of AICTE and affiliation of the Anna University for such a progressive intake is a standing testimony for the continuous growth of the college over the years. 9 of our departments are recognized as Research Centres of Anna University to conduct Ph.D. programmes and many scholars have obtained Ph.D. through these research centre.</div>
+                  <div class="tab-pane fade" id="nav-about-dept" role="tabpanel" aria-labelledby="nav-about-dept-tab">Since the inception of REC in 1997, the Department of Computer Science and Engineering has been continuously making progress in teaching and R&D activities. Initially commencing with an intake of 60 students, currently the intake is 300 seats. The Post Graduate programme viz. M.E. - Computer Science and Engineering was introduced in the year 2004-05 and in 2006 the Department was recognized as a Collaborative Research Centre by Anna University to offer Ph.D. programmes. The Department is accredited by NBA and Industries. 
+                    The Department has been maintaining an active interaction with the industries particularly with the Computer Society of India. The IT major Tata Consultancy Services has accredited the college for faculty and students development programmes, campus interview etc. The Department has entered an MoU with IBM, Infosys and U.S. Technologies for software training and Faculty Development Programmes, besides R&D activities. Many of the students are well placed in leading software companies such as TCS, Infosys, Satyam, Polaris etc.</div>
+                  <div class="tab-pane fade" id="nav-about-ieee" role="tabpanel" aria-labelledby="nav-about-ieee-tab">This ieee mainly focuses towards the evolving requirement for intelligent computing and communication. This conference aims to present an integrated platform for advanced and multi-disciplinary research towards novelties that may be realistic to offer genuine solution to wide-ranging glitches in society, environment and industries. The Scope is also stretched out in the direction of deployment of emerging computational and knowledge transfer approaches, optimizing solutions in varied disciplines of science and technology. 
+                    InterNational Conference on Computing and Data Science (ICCDS-2023) is the platform where academicians and industry research present their contemporary findings so that new inclinations and thoughts on computing and communication can be explored. The key objective is to offer the participants all over the nation to share their ideas and experience with peers. In addition to this, the conference will also help the participants in establishing a research network which will help them in their career path.
+                    Eminent personalities from DRDO have consented to be part of this conference by delivering special lectures on recent advanced topics.
+                    Expose the participants to the emerging technologies and methodologies and make them more capable of solving future challenges with team collaboration.
+            Provide an enriched platform for Engineers, Technicians, Industry and Research Organization to share their vision, experience, and perspective directly with engineers, students and innovators.
+            
+                    </div>  
+                </div>
+              </div>
+        </div>
+    </section>
 
+
+    <footer>
+        <div class="container-fluid column">
+            <div class="row">
+                <div class="col-lg-4 column">
+                    <h3>About IEEE</h3>
+                    <hr class="footer-hr">
+                    <p>A not-for-profit organization, IEEE is the world's largest technical professional organization dedicated to advancing technology for the benefit of humanity</p>
+                </div>
+                <div class="col-lg-4 column">
+                    <h3>Links</h3>
+                    <hr class="footer-hr">
+                    <ul  class="footer-li">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#about-us">About Us</a></li>
+                        <li><a href="#events">Events</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 column">
+                    <h3>Contact Us</h3>
+                    <hr class="footer-hr">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Sed aliquet sed arcu dignissim id. 
+                    </p>
+                    <div >
+                    <a class="footer-icons" href="www.rajalakshmi.org"><i class="fa-solid fa-envelope fa-lg" style="color: #ffffff;"></i></a>
+                    <a class="footer-icons" href="www.twiiter.com"><i class="fa-brands fa-twitter fa-lg" style="color: #ffffff;"></i></a>
+                    <a class="footer-icons" href="www.github.com"><i class="fa-brands fa-github fa-lg" style="color: #ffffff;"></i></a>
+                    <a class="footer-icons" href="www.instagram.com"><i class="fa-brands fa-instagram fa-lg" style="color: #ffffff;"></i></a>
+                    <a class="footer-icons" href="www.linkedin.com"><i class="fa-brands fa-linkedin fa-lg" style="color: #ffffff;"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p class="footer-copyright">Copyright © 2023 All rights reserved | REC</p>
+    </footer>
 
 
 
